# try_rag

./: .env  .gitignore  .pre-commit-config.yaml  README.md  env-example  pyproject.toml
airflow_home/: airflow.cfg  standalone_admin_password.txt
notebooks/: preprocessing.ipynb
src/try_rag/: __init__.py  config.py  main.py  models.py  registry.py
src/try_rag/tasks/: __init__.py
src/try_rag/tasks/health_check/: task.py
src/try_rag/tasks/postprocessing/: task.py
