[project]
name = "try-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Malte", email = "mboie@students.uni-mainz.de" }
]
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.9.2",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.poe.tasks]
run = { script = "src.try_rag.main:main" }

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
]
